--- a/website/content/pitch/index.qmd
+++ b/website/content/pitch/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Rømer Chain"
-subtitle: "The Layer 1 Built for Market Makers"
+subtitle: "Native FIX. Pure Blockchain. Seamless Trading."
 format:
   revealjs:
     theme: simple
@@ -29,13 +29,19 @@ format:
               box-shadow: 0 4px 8px rgba(0,0,0,0.2);
               text-decoration: none;
             }
+          /* Slide headings */
+            .reveal h1, .reveal h2, .reveal h3 {
+              color: #f04275;
+              font-weight: 700;
+              text-transform: none;
+            }
           </style>
           <a href="http://romer.network/" class="back-button">← Back to Website</a>
     controls: true
     slide-number: true
     width: 1600
     height: 900
-    footer: "Rømer Chain - 2024"
+    footer: "Rømer Chain - 2025"
     incremental: true
 ---
 
@@ -89,7 +95,7 @@ Four core innovations create unprecedented advantages for market makers:
 ::: {.column width="25%"}
 **Superior Performance**
 
-- Powered by Commonware::Simplex
+- Powered by Commonware
 - Industry-leading speed
 - Outperforms all competitors
 :::
